--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
   <input id="new-task-content" type="text" placeholder="new task" required/>
   <button>Create</button>
 </form>
+
+<form>
+<button class="buttons" id="all">All</button>
+<button class="buttons" id="active">Active</button>
+<button class="buttons" id="completed">Completed</button>
+</form>
+
         </div>
       </div>
     </div>
+
+
   </body>
 </html>
