--- a/index.html
+++ b/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="script.js"></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'></script>
-    <script src="https://kit.fontawesome.com/ae3223795d.js" crossorigin="anonymous"></script>
-
-</head>
-<body>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <h2>To Do List</h2>
-          <div id='todo-list'>
-          </div>
-          <form id="create-task">
-  <input id="new-task-content" type="text" placeholder="new task" required/>
-  <button>Create</button>
-</form>
-
-<form>
-<button class="buttons" id="all">All</button>
-<button class="buttons" id="active">Active</button>
-<button class="buttons" id="completed">Completed</button>
-</form>
-
-        </div>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>To Do List</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link href="style.css" rel="stylesheet" type="text/css" />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+      <script src="script.js"></script>
+      <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'></script>
+      <script src="https://kit.fontawesome.com/ae3223795d.js" crossorigin="anonymous"></script>
+   </head>
+   <body>
+      <div class="container">
+         <table class="table">
+            <div class="row">
+               <h1>To Do List</h1>
+               <form id="create-task">
+                  <input id="new-task-content" type="text" placeholder="new task" required/>
+               </form>
+               <div class="col-xs-12">
+                  <tbody>
+                     <div id='todo-list'></div>
+                     <form>
+                        <button type="button" class="btn btn-light" id="all">All</button>
+                        <button type="button" class="btn btn-light" id="active">Active</button>
+                        <button type="button" class="btn btn-light" id="completed">Completed</button>
+                     </form>
+                  </tbody>
+               </div>
+            </div>
+         </table>
       </div>
-    </div>
-
-
-  </body>
+   </body>
 </html>
